@@ -11,5 +11,22 @@ require([], function() {
 
   });
 
+  describe('toThrowStartsWith', function() {
+
+    describe('matches', function() {
+      it('should match the error string', function() {
+        expect(function(){ throw new Error('ooops'); })
+          .toThrowStartsWith('ooops');
+      });
+    });
+
+    describe('non-matches', function() {
+      it('should mismatch the error string', function() {
+        expect(function(){ throw new Error('ooops'); })
+          .not.toThrowStartsWith('1');
+      });
+    });
+
+  });
 
 });
