@@ -7,3 +7,4 @@ v0.1.2
 * Added toStartWithEither()
 * separated all matchers+tests into reasonable files
 * provide a runner-dist.html which runs all tests against the built version
+* added toThrowStartsWith()
